projects/components/src/multi-select/multi-select.component.scss
@import 'mixins';

.multi-select {
  @include disableable;
  display: flex;
  align-items: center;
  height: 100%;
  width: 100%;

  &.border {
    border: 1px solid $color-border;
    border-radius: 6px;
  }

  .multi-select-container {
    width: 100%;
  }

  &.open .trigger-content.icon-mode {
    color: $blue-5;
    background: $blue-1;
    border-color: $blue-3;
  }

  .trigger-content {
    display: flex;
    align-items: center;
    padding: 0 8px;
    cursor: pointer;
    height: 34px;

    &.icon-mode {
      border: 1px solid transparent;
      border-radius: 64px;
      padding: 0 4px;

      &:hover {
        color: $blue-5;
        background: $blue-1;
        border-color: $blue-3;
      }
    }

    .trigger-label-container {
      display: flex;
      width: 100%;
      align-items: center;
      padding-left: 8px;

      .trigger-label {
        @include body-2-medium();
        padding-left: 8px;
      }

      .trigger-icon {
        padding: 0 8px;
        margin-left: auto;
      }
    }
  }
}

.multi-select-content {
  @include dropdown(6px);
  min-width: 120px;
  display: flex;
  flex-direction: column;

  .divider {
    padding: 0px 16px 4px 16px;
  }

  .multi-select-option {
    display: flex;
    height: 34px;
    padding: 4px 16px;
    cursor: pointer;
    font-size: 14px;
    align-items: center;

    .checkbox {
      margin: 0px;
    }

    .icon {
      margin-left: 8px;
    }

    .label {
      margin-left: 8px;
    }

    &:hover {
      background: $gray-1;
    }
  }

  .search-bar {
    display: flex;
    height: 34px;
    margin-top: 2px;
    cursor: pointer;
    font-size: 14px;
    align-items: center;
  }
}

